--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "firebase": "^5.10.1",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   },
